\/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-will-service
spec:
  selector:
    any-name: app-will-dep
  ports:
    - protocol: TCP
      port: 8888
