\/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-will-ingress
  labels:
    app: argocdrocks
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: app-will-service
           port:
             number: 8888
